# poetry-update-all

./: .gitignore  README.md  poetry_update_all  pyproject.toml
