[tool.poetry]
name = "poetry-update-all"
version = "0.1.0"
description = ""
authors = ["uuip <uuip@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
setuptools = ">=73.0.1"

packaging = "^24.1"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
